[metadata]
name = stevedoretest

[files]
packages = stevedoretest

[entry_points]
stevedoretest.driver =
    simple_driver1 = stevedoretest.my_driver:SimpleDriver1
    simple_driver2 = stevedoretest.my_driver:SimpleDriver2

stevedoretest.extension =
    simple_extension1 = stevedoretest.my_extension:SimpleExtension1
    simple_extension2 = stevedoretest.my_extension:SimpleExtension2